fixes some overflow issue of homepage

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,6 @@
 
 /* Custom Dark Mode Variables */
 @custom-variant dark (&:where(.dark, .dark *));
+/* * {
+  overflow-x: hidden !important;
+} */
